--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,18 +6,12 @@
   <title>Document</title>
 </head>
 <body class="text-center">
-  <form class="form-signin">
-    
+  <form class="form-login" th:class="${user}" >
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+    <input type="email" id="inputEmail" th:field="${user.username}" class="form-control" placeholder="Email address" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
+    <input type="password" id="inputPassword" th:field="${user.password}" class="form-control" placeholder="Password" required>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     <a class="btn btn-lg btn-primary btn-block" href="register.html" type="button">Register</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
